testsuite/bsc.typechecker/UndefinedTask.bs
package UndefinedTask() where

foo :: Action
foo = $foobar 17